# know-ops-mcp

./: .gitignore  AGENTS.md  CONTRIBUTING.md  FEATURES.md  HISTORY.md  LICENSE  PLANS.md  README.md  pyproject.toml
cursor_memo/: server.py
cursor_memo/knowledge_ops/: __init__.py  frontmatter.py  note.py
cursor_memo/storage/: __init__.py  memory.py
docs/: ARCHITECTURE.md  CHANGELOG.md  ROADMAP.md
know_ops_mcp/: know_ops.py  server.py
know_ops_mcp/know_ops/: __init__.py
know_ops_mcp/know_ops/knowledge/: __init__.py  base.py  general.py  serializer.py
know_ops_mcp/know_ops/storage/: __init__.py
know_ops_mcp/know_ops/storage/backends/internal/: __init__.py  local.py  memory.py
know_ops_mcp/knowledge/: __init__.py  base.py  general.py
know_ops_mcp/setup/: cli.py  config.py  wizard.py
know_ops_mcp/storage/: __init__.py  base.py  cache.py  disk.py
know_ops_mcp/storage/backends/internal/: __init__.py  local.py  memory.py
src/cursor_memo/: ops.py  server.py
tests/: README.md  conftest.py  test_know_ops.py  test_server.py
tests/knowledge/: test_base.py  test_serializer.py
tests/setup/: test_cli.py  test_config.py  test_wizard.py
tests/storage/: test_cache.py  test_disk.py  test_service.py
tests/storage/backends/internal/: test_local.py  test_memory.py
