[project]
name = "know-ops-mcp"
version = "0.1.0"
description = "Shared knowledge MCP server for LLM clients"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2.0",
    "python-frontmatter>=1.0",
    "questionary>=2.1.1",
    "typer>=0.24.1",
]

[project.scripts]
know-ops-mcp = "know_ops_mcp.setup.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["know_ops_mcp"]
