[project]
name = "know-ops-mcp"
version = "0.1.0"
description = "Shared knowledge MCP server for LLM clients"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2.0",
    "httpx>=0.28.1",
    "python-frontmatter>=1.0",
    "questionary>=2.1.1",
    "tomli-w>=1.2.0",
    "typer>=0.24.1",
]

[project.scripts]
know-ops-mcp = "know_ops_mcp.setup.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["know_ops_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "live: hits real external services (e.g. GitHub). Excluded by default; run with `pytest -m live`.",
]
