[project]
name = "know-ops-mcp"
version = "0.1.0"
description = "Shared knowledge MCP server for LLM clients"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "gyeo-ri", email = "gyeori.world@gmail.com" }]
dependencies = [
    "fastmcp>=3.2.0",
    "httpx>=0.28.1",
    "python-frontmatter>=1.0",
    "questionary>=2.1.1",
    "tomli-w>=1.2.0",
    "typer>=0.24.1",
    "pydantic>=2.0",
]

[project.urls]
Repository = "https://github.com/gyeo-ri/know-ops-mcp"
Issues = "https://github.com/gyeo-ri/know-ops-mcp/issues"

[project.scripts]
know-ops-mcp = "know_ops_mcp.setup.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-httpx>=0.36",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["know_ops_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["know_ops_mcp"]

[tool.coverage.report]
show_missing = true
skip_empty = true
